syntax = "proto3";

package contestant.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/ictsc/ictsc-outlands/backend/internal/proto/contestant/v1";

message Contestant {
  string id = 1 [(buf.validate.field).string.len = 26];
  string name = 2 [(buf.validate.field).string = {
    min_len: 1,
    max_len: 20
  }];
  string team_id = 3 [(buf.validate.field).string.len = 26];
}

message GetMeRequest {}

message GetMeResponse {
  Contestant user = 1 [(buf.validate.field).required = true];
}

message GetContestantRequest {
  string id = 1 [(buf.validate.field).string.len = 26];
}

message GetContestantResponse {
  Contestant user = 1 [(buf.validate.field).required = true];
}

message PostContestantRequest {
  string name = 1 [(buf.validate.field).string = {
    min_len: 1,
    max_len: 20
  }];
  string invitation_code = 2 [(buf.validate.field).string.len = 32];
}

message PostContestantResponse {
  Contestant user = 1 [(buf.validate.field).required = true];
}

message PatchMeRequest {
  string name = 1 [(buf.validate.field).string = {
    min_len: 1,
    max_len: 20
  }];
}

message PatchMeResponse {
  Contestant user = 1 [(buf.validate.field).required = true];
}

service ContestantService {
  rpc GetMe(GetMeRequest) returns (GetMeResponse) {}
  rpc GetContestant(GetContestantRequest) returns (GetContestantResponse) {}
  rpc PostContestant(PostContestantRequest) returns (PostContestantResponse) {}
  rpc PatchMe(PatchMeRequest) returns (PatchMeResponse) {}
}
